@@ -180,8 +180,9 @@ $rcmail_config['message_cache_lifetime'] = '10d';
 // set the port for the ssl connection as value of this option if it differs from the default 443
 $rcmail_config['force_https'] = false;
 
-// Allow browser-autocompletion on login form
-$rcmail_config['login_autocomplete'] = false;
+// Allow browser-autocompletion on login form.
+// 0 - disabled, 1 - username and host only, 2 - username, host, password
+$rcmail_config['login_autocomplete'] = 0;
 
 // If users authentication is not case sensitive this must be enabled.
 // You can also use it to force conversion of logins to lower case.
