@@ -7,6 +7,7 @@ CHANGELOG Roundcube Webmail
 - Fix window is blur'ed in IE when selecting a message (#1487316)
 - Fix cursor position on compose form in Webkit browsers (#1486674)
 - Fix setting charset of attachment filenames (#1487122)
+- Allow setting autocomplete attribute for all inputs separately (#1487313)
 
 RELEASE 0.5-BETA
 ----------------
